started implementing login and signup. there is still much to do such as rearranging openapi, then implementing a controller to fit into this, then creating a mapper and mapping target models with source models. then the implementation is near done. now i set up the structure. i am planning to create a seperate module for auth tho
